--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,10 @@
 //backgrounds
 $bg-grey: #3A424C;
 $bg-grey-light: #4E555E;
-$bg-grey-light: #4E555E;
 $bg-grey-1: #485865;
 $bg-grey-2: #61675F;
 $bg-grey-3: #5E6675;
-
+$bg-grey-4: #484F58;
 
 //text color
 $text-blue: #54C9F9;
